# ninety

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SETUP.md  docker-compose.yml  impeccable.config.mjs  package.json  pnpm-lock.yaml  skills-lock.json
.claude/: README.md  settings.json
apps/worker-cortex/: CLAUDE.md  package.json  pyproject.toml
apps/worker-cortex/src/cortex/: __init__.py  bus.py  config.py  devig.py  dixon_coles.py  hazard.py  main.py  pricing.py  synth.py  synth_marks.py
apps/worker-cortex/tests/: samples.py  test_bus.py  test_devig.py  test_hazard.py  test_pricing.py  test_synth.py  test_synth_marks.py
design/: BLUEPRINT.md  DECISIONS.md  PROVENANCE.md  SCREEN-DATA-MAP.md  UI-SYSTEM.md  tokens.css
docs/: API-CONTRACT.md  AUDIT-2026-07-14.md  BACKEND-BLOCKCHAIN-AUDIT.md  BLOCKERS.md  BUILD-LOG.md  COMPONENT-AUDIT-2026-07-16.md  DATA-PLACEMENT.md  DEPLOY-HANDOFF.md  FINAL-DAY.md  GRANT-AGENTIC.md  NINETY-DESIGN-LAWS.md  PROJECT-STATE-AND-VOCAB.md  SETUP-LIVE.md  STATUS-2026-07-16.md  SUBMISSION-FIELDS.md  SUBMISSION-FORM-FINAL.md  SUBMISSION-TECHNICAL.md  SUBMISSION.md  TXLINE-MAP.md  html2pdf6-0.html  ralph-ui-ledger.md
infra/: fly.api.toml  free-tier-map.md
plans/: 001-live-flash-retrigger.md  002-reduced-motion-global-rule.md  003-tailwind-motion-token-plumbing.md  004-tokenize-stray-literals.md  005-tooltip-system.md  006-press-feedback-pass.md  007-halt-banner-polish.md  008-missed-beats.md  (+2 more)
(+911 files in other folders)
